# TopologyGenerator

./: .gitignore  CMakeLists.txt  README.md  basic functions.txt
DockerMultiContainer/: Dockerfile  build_emulator.sh  build_script.py  clean_emulator.sh  docker-compose.yml
client/: cdn_requests_10M.csv  cdn_requests_10M_res.csv  cdn_requests_1cycle_7observ_2000.csv  csv_deal.py  emulator_client.py  http_client_emulator.py  link_client.py  test.py
client/data/: assignment-row.csv  cloudfront.json  request.json  vantage_point.json
client/log/: log.csv
client/res/: cdn_requests_10M_res.csv  cdn_requests_10M_res_bed.csv  cdn_requests_10M_res_bed_complete.csv
edge_server/: clean_rtt.sh  http_client_emulator.py  link_edge_server.py  run_ats.sh  set_rtt.sh
objects/: 1024  102400
source_server/: README.md  http_server_emulator.py  http_simple_server.py  object_generator.py  run_http_server.sh
source_server/html/: index.html
source_server/html/objects/: 10240  1048576  512000
src/: main.c  tg_basic.h  tg_node.c  tg_node.h
testbed_setup/: bird.conf  docker-compose.yml  win32_update_docker_image.bat
